correction des beug et endpointes
